# rl-ppo-for-trade

./: .gitignore  .prompt  @.prompt  README.md  adaptation.py  exp4A-full-reignite.json  features_report.py  featureset.py  pyproject.toml
data/indicators/: PETR4.SA_2019-01-01_2023-01-01_w20.npz  PETR4.SA_2023-01-02_2025-12-31_w20.npz  PETR4.SA_2025-01-02_2025-10-17_w20.npz
data/mcp_state/trials/trial_20251030_135408_724968/: config.json  stdout.txt
data/mcp_state/trials/trial_20251030_135512_991855/: config.json  metrics.json  stdout.txt
data/mcp_state/trials/trial_20251030_135552_918278/: config.json  metrics.json  stdout.txt
data/metrics/: sweep_best_20251031_195824.json  sweep_best_20251031_202125.json
data/util/: README.md  clear_data.py  mcp_optimizer_server.py  optimizer_core.py  optimizerctl.py  probe_analise.py  run_multi_seed.py
web/trade-dashboard/: README.md  index.html  package-lock.json  package.json
web/trade-dashboard/src/: App.tsx  TradingTimeline.tsx  main.tsx
