[project]
name = "reinforcement-learning-ppo-for-trade"
version = "0.1.0"
description = "Reinforcement Learning PPO para simulação de trading"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "absl-py==2.3.1",
    "ale-py==0.11.2",
    "beautifulsoup4==4.14.2",
    "build==1.3.0",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "cloudpickle==3.1.1",
    "contourpy==1.3.3",
    "curl-cffi==0.13.0",
    "cycler==0.12.1",
    "farama-notifications==0.0.4",
    "filelock==3.20.0",
    "fonttools==4.60.1",
    "frozendict==2.4.6",
    "fsspec==2025.9.0",
    "grpcio==1.76.0",
    "gymnasium==1.2.1",
    "idna==3.11",
    "jinja2==3.1.6",
    "kiwisolver==1.4.9",
    "markdown==3.9",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.7",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multitasking==0.0.12",
    "networkx==3.5",
    "numpy==2.3.4",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.5",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvshmem-cu12==3.3.20",
    "nvidia-nvtx-cu12==12.8.90",
    "opencv-python==4.11.0.86",
    "packaging==25.0",
    "pandas==2.3.3",
    "peewee==3.18.2",
    "pillow==12.0.0",
    "platformdirs==4.5.0",
    "protobuf==6.33.0",
    "psutil==7.1.2",
    "pycparser==2.23",
    "pygame==2.6.1",
    "pygments==2.19.2",
    "pyparsing==3.2.5",
    "pyproject-hooks==1.2.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "requests==2.32.5",
    "rich==14.2.0",
    "setuptools==80.9.0",
    "six==1.17.0",
    "soupsieve==2.8",
    "stable-baselines3==2.7.0",
    "sympy==1.14.0",
    "ta-lib==0.6.8",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "torch==2.9.0",
    "tqdm==4.67.1",
    "triton==3.5.0",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "websockets==15.0.1",
    "werkzeug==3.1.3",
    "yfinance==0.2.66"
]
